# alexfedoseev.com

./: .babelrc  .env  .gitignore  .nowignore  .prettierrc  .vercelignore  Cargo.toml  README.md  bsconfig.json  css.json  jsconfig.json  netlify.toml  next.config.js  now.json  package-lock.json  package.json  photo.json  shell.nix  vercel.json
app/: Env.res  Root.res  ScreenContext.res  ThemeContext.res
app/bindings/: GrayMatter.res  JustifiedLayout.res  Mdx.res  Next.res  PhotoSwipe.res  Prism.res
app/icons/: CaretIcon.res  ChevronLeftIcon.res  ChevronRightIcon.res  CodeIcon.res  CrossPostIcon.res  DarkThemeIcon.res  FacebookShareIcon.res  GithubIcon.res  InfoIcon.res  InstagramIcon.res  LightThemeIcon.res  TipIcon.res  TwitterIcon.res  TwitterShareIcon.res
app/modules/: Browser.res  Ga.res  Ga.resi  Image.res  IntersectionObserver.res  Math.res  MediaQueryList.res  Module.res  Promise.res  Px.res  ReactContext.res  Sole.res  Subscription.res  Timer.res  Visibility.res  Web.res
app/pages/: ErrorPage.res  ErrorPage.resi  ErrorPageStyles.res  MainPage.res  MainPageStyles.res
cli/: cli.rs  config.rs  env.rs  file.rs  loc.rs  main.rs  result.rs  timer.rs
config/: image-loader.js  mdx-loader.js  webpack.config.js  webpack.development.config.js  withImages.js  withLinaria.js  withMdx.js
env/: .env.example
pages/: 404.js  500.js  _app.js  _document.js  index.js  me.js  photo.js
script/: css.js  photo.js
src/: Env.re  GlobalStyles.js  GlobalStyles.re  Root.hot.js  Root.re  Route.re  Router.re  Shell.re  Theme.re  index.hot.js  index.html  index.js
(+290 files in other folders)
